# projectZ

./: .env.example.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  install.sh  projectz.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/profiles/: web_pentest.json
data/wordlists/: admin-panels.txt  cloud-providers.txt  subdomains-top1m.txt  usernames-global.txt
examples/: 04_api_usage.py
src/: __init__.py
src/core/: __init__.py  async_http.py  banners.py  cli.py  config.py  correlator.py  dns_compat.py  engine.py  http_client.py  logger.py  module_guide.py  notifier.py  output.py  profiles.py  rate_limiter.py  storage.py
src/modules/: __init__.py
src/modules/cybersec/: __init__.py  abuseipdb_alt.py  exploitdb.py  fiveeyes.py  haveibeenpwned.py  hybrid_alt.py  intelx_alt.py  otx_alt.py  packetstorm.py  pastebin_dump.py  threatcrowd_alt.py  urlhaus.py  urlscanio_alt.py  virustotal_alt.py
src/modules/domain/: __init__.py  asn_info.py  cms_detect.py  cors_check.py  dns_records.py  headers_check.py  hosting.py  reverse_ip.py  spf_dmarc.py  ssl_certs.py  subdomains.py  tech_stack.py  whois.py
src/modules/dorking/: __init__.py  admin_panels.py  credentials.py  directory_brute.py  error_messages.py  files_enum.py  vulns_dorks.py
src/modules/harvesting/: __init__.py  bing_harvest.py  crtsh.py  dnsdumpster.py  google_harvest.py  hunter_alt.py  leakcheck.py  s3_buckets.py  securitytrails_alt.py
tests/: test_cli.py
tests/test_core/: test_config.py  test_storage.py
(+19 files in other folders)
